--- a/public/index.html
+++ b/public/index.html
@@ -15,22 +15,22 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
-        <ul class="list-group todo-list">
+        <ul class="list-group user-list">
           <li class="list-group-item new-item">
-            <form id="todo-form">
+            <form id="user-form">
               <div class="container">
                 <div class="row">
                   <div class="col-10">
-                    <input class="new-item form-control" placeholder="Add a todo" type="text" />
+                    <input class="new-item form-control" placeholder="Add a user" type="text" />
                   </div>
                   <div class="col-2">
-                    <button type="submit" class="btn btn-success">Add Todo</button>
+                    <button type="submit" class="btn btn-success">Add user</button>
                   </div>
                 </div>
               </div>
             </form>
           </li>
-          <span class="todo-container">
+          <span class="user-container">
           </span>
         </ul>
       </div>
