--- a/public/index(old).html
+++ b/public/index(old).html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Empty Pantry Main</title>
+  <title>Empty Pantry LIKES</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/lumen/bootstrap.min.css" />
   <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
@@ -21,11 +21,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-10">
-                    <input class="new-item form-control" placeholder="Add a user" type="text" />
-                    <input class="new-item form-control" placeholder="Add a like" type="text" />
-                    <input class="new-item form-control" placeholder="Add a saveforlater" type="text" />
+                    <input class="new-item form-control" placeholder="Add a Recipe" type="text" />
                   <div class="col-2">
-                    <button type="submit" class="btn btn-success">Add user</button>
+                    <button type="submit" class="btn btn-success">Add a Recipe</button>
                   </div>
                 </div>
               </div>
