--- a/public/index(old).html
+++ b/public/index(old).html
@@ -21,9 +21,9 @@
               <div class="container">
                 <div class="row">
                   <div class="col-10">
-                    <input class="new-item form-control" placeholder="Add a Recipe" type="text" />
+                    <input class="new-item form-control" placeholder="Add a User" type="text" />
                   <div class="col-2">
-                    <button type="submit" class="btn btn-success">Add a Recipe</button>
+                    <button type="submit" class="btn btn-success">Add a User</button>
                   </div>
                 </div>
               </div>
