--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,15 @@
               <div class="container">
                 <div class="row">
                   <div class="col-10">
+                    <!--- 
                     <input class="new-item form-control" placeholder="Add a user" type="text" />
+                    --->
                     <input class="new-item form-control" placeholder="Add a like" type="text" />
-                    <input class="new-item form-control" placeholder="Add a saveforlater" type="text" />
                   <div class="col-2">
+                    <!--- 
                     <button type="submit" class="btn btn-success">Add user</button>
+                    -->
+                    <button type="submit" class="btn btn-success">Add like</button>
                   </div>
                 </div>
               </div>
@@ -37,9 +41,10 @@
       </div>
     </div>
   </div>
-  <!-- Custom Script -->
+  <!-- Custom Script 
   <script src="./js/views.js" type="text/javascript"></script>
-
+  -->
+  <script src="./js/likes.js" type="text/javascript"></script>
 </body>
 
 </html>
