--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   <!-- Custom Script 
   <script src="./js/views.js" type="text/javascript"></script>
   -->
-  <script src="./js/svlaters.js" type="text/javascript"></script>
+  <script src="./js/likes.js" type="text/javascript"></script>
 </body>
 
 </html>
